# finances

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.backend  README.md  docker-compose.yml  main.py  plan.md  pyproject.toml
.cursor/rules/: project-architecture.mdc  project-startup.mdc  python-rules.mdc  python.mdc
.github/workflows/: build-images.yml  deploy-swarm.yml
app/: exceptions.py
app/api/: exception_handlers.py  router.py
app/auth/: __init__.py  jwt.py  password.py
app/config/: database.py  env.py  logging.py  logging.yaml
app/models/: __init__.py  account.py  auth_exchange_code.py  base.py  category.py  currency.py  exchange_rate.py  recurring_transaction.py  shopping_list.py  shopping_template.py  transaction.py  user.py  workspace.py
app/repositories/: __init__.py  account_repository.py  auth_exchange_code_repository.py  base_repository.py  category_repository.py  currency_repository.py  exchange_rate_repository.py  recurring_transaction_repository.py  shopping_list_repository.py  shopping_template_repository.py  transaction_repository.py  user_repository.py  workspace_repository.py
app/services/: __init__.py  account_service.py  auth_service.py  base_service.py  category_service.py  currency_service.py  exchange_rate_collector_service.py  exchange_rate_service.py  user_service.py  (+6 more)
cronjobs/: collect_exchange_rates.py  execute_recurring_transactions.py
docs/: ci-cd.md  swarm.md
frontend/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
migrations/: env.py
(+113 files in other folders)
