[project]
name = "finances"
version = "0.1.0"
description = "Finance management API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "alembic>=1.14.0",
    "pyyaml>=6.0.0",
    "python-dateutil>=2.9.0.post0",
    "authlib>=1.6.7",
    "httpx>=0.28.1",
    "sentry-sdk>=2.53.0",
    "ruff>=0.15.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
